# azurioneye-samd-demo

./: .gitignore  DEMO_WALKTHROUGH.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_github.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  requirement.md  risk_item.md  test_case.md
.github/workflows/: ci-tests.yml  release.yml  sbom-generation.yml  security-scan.yml
.ketryx/: config.yaml
docker/: Dockerfile  docker-compose.yml
docs/qms/: Risk_Management_File.md  SOUP_Analysis.md  Software_Architecture_Design.md  Software_Development_Plan.md  Software_Requirements_Specification.md  Traceability_Matrix.md  Verification_Validation_Plan.md
src/azurioneye_operator/: __init__.py  config.py  main.py
src/azurioneye_operator/api/: health.py  orchestrate.py  predict.py
src/azurioneye_operator/core/: orchestrator.py  state_manager.py
src/azurioneye_operator/domain/: clinical_workflow.py
src/azurioneye_operator/infra/: audit_logger.py
src/azurioneye_operator/models/v1.0.0/: metadata.json
src/azurioneye_operator/monitoring/: metrics.py
tests/: conftest.py
tests/compliance/: test_requirements_trace.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_orchestrator.py  test_predict.py  test_state_machine.py
